--- a/src/app/home/api-keys/api-keys-list/api-keys-list.component.html
+++ b/src/app/home/api-keys/api-keys-list/api-keys-list.component.html
@@ -1,6 +1,6 @@
 <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
     <div class="align-self-center text-center">
-        <div class="spinner-border text-dark" role="status">
+        <div class="spinner-border text-dark">
             <span class="sr-only">Processing...</span>
         </div>
         <div class="text-secondary mt-2">Processing...</div>
@@ -28,24 +28,24 @@
             No keys found
         </div>
         <div class="row" *ngIf="keyList.length > 0">
-            <div class="col-3 border-right keys pr-0">
+            <div class="keys-list col-3 border-right pr-0">
                 <div *ngFor="let key of keyList; let usrIndex = index" class="d-flex" [id]="'key' + usrIndex"
                     (click)="showDetails(key)">
                     <div class="selectedTab" [ngStyle]="{
               background: key._id === selectedKey?._id ? '#ff6f00' : 'none'
             }"></div>
-                    <div class="keyList" [ngClass]="{ selected: key._id === selectedKey?._id }">
-                        <div class="d-flex hover">
-                            <span class="name text-truncate" [ngbTooltip]="key?.name">
+                    <div class="keyList w-100" [ngClass]="{ selected: key._id === selectedKey?._id }">
+                        <div class="d-flex flex-column hover p-3">
+                            <span class="name text-truncate" container="body" [ngbTooltip]="key?.name">
                                 {{ key?.name }}
                             </span>
+                            <span class="email text-secondary font-12">Expire On: {{ key.expiryAfterDate | date:'medium' }}</span>
                         </div>
-                        <!-- <span class="email text-secondary font-12">{{ key.keyname }}</span> -->
                     </div>
                 </div>
             </div>
-            <div class="col-9 keys">
-                <odp-api-keys-manage></odp-api-keys-manage>
+            <div class="col-9">
+                <odp-api-keys-manage *ngIf="selectedKey" [(data)]="selectedKey"></odp-api-keys-manage>
             </div>
         </div>
     </div>
@@ -72,22 +72,28 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="expiry">Expiry After <small class="font-11 text-secondary">(in Days)</small></label>
+                <label for="expiryAfter">Expiry After <small class="font-11 text-secondary">(in Days)</small></label>
                 <div class="w-100 position-relative">
-                    <input id="expiry" class="form-control" type="number" placeholder="Days" formControlName="expiry"
+                    <input id="expiryAfter" class="form-control" type="number" placeholder="Days" formControlName="expiryAfter"
                         autocomplete="autocomplete_off_hack" />
                 </div>
             </div>
             <div *ngIf="showKeyDetails" class="form-group">
-                <label for="apiKey">API Key</label>
+                <label for="apiKey" class="fw-500">API Key
+                    <span *ngIf="!copied" class="ml-2 dsi dsi-copy text-accent hover"
+                        (click)="copyToClipboard()"></span>
+                    <span *ngIf="copied" class="ml-2 text-accent">Copied!</span>
+                </label>
                 <div class="w-100 position-relative">
-                    <textarea id="apiKey" class="form-control" formControlName="apiKey"
-                        autocomplete="autocomplete_off_hack" ></textarea>
+                    <textarea id="apiKey" class="form-control" rows="5" cols="30" formControlName="apiKey"
+                        autocomplete="autocomplete_off_hack"></textarea>
+                    <small class="form-text text-secondary">This key will disappear once you close this window.</small>
                 </div>
             </div>
         </form>
         <div *ngIf="!showKeyDetails" class="d-flex align-items-center justify-content-between mt-auto">
-            <button type="button" class="btn btn-primary add-button w-100" id="createKey" [disabled]="keyForm.invalid" (click)="createKey()">
+            <button type="button" class="btn btn-primary add-button w-100" id="createKey" [disabled]="keyForm.invalid"
+                (click)="createKey()">
                 Create Key
             </button>
         </div>
