--- a/src/app/home/api-keys/api-keys-list/api-keys-list.component.scss
+++ b/src/app/home/api-keys/api-keys-list/api-keys-list.component.scss
@@ -10,105 +10,6 @@
     height: calc(100vh - 174px);
 }
 
-.agent-name-wrapper {
-    .dsi-danger-circle {
-        top: 9px;
-        right: 6px;
-    }
-}
-
-.list-group-item {
-    overflow: hidden;
-
-    &.header {
-        min-height: 38px;
-        max-height: 38px;
-        color: #6C7584;
-    }
-
-    .item-name {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-password {
-        min-width: 150px;
-        max-width: 150px;
-    }
-
-    .item-ip-address {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-mac-address {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-streak {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-status {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-last-invoked-at {
-        min-width: 150px;
-        max-width: 150px;
-    }
-
-    .item-release {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-pending-files {
-        min-width: 120px;
-        max-width: 120px;
-    }
-
-    .item-actions {
-        min-width: 200px;
-        max-width: 200px;
-        position: absolute;
-        right: -500px;
-        top: 12px;
-        transition: 0.2s;
-
-        .actions {
-
-            .dsi {
-                min-width: 24px;
-                max-width: 24px;
-                display: inline-block;
-                color: $sub-headings;
-            }
-
-            .dsi,
-            .api-icon {
-                &:hover {
-                    color: $dark;
-                }
-            }
-        }
-    }
-
-    &:hover {
-        .item-actions {
-            right: 0px;
-        }
-    }
-
-    .scroll-pane {
-        height: 100%;
-        overflow: auto;
-    }
-}
-
 .overlay {
     height: 100vh;
     width: 100vw;
@@ -133,46 +34,7 @@
     }
 }
 
-.list-group-item {
-    &.header {
-        font-weight: 400;
-        height: 40px;
-    }
-}
-
-.more-options {
-    z-index: 2;
-    top: 10px;
-    right: 10px;
-    min-width: 140px;
-
-    .list-group-item {
-        height: 36px;
-    }
-}
-
-.download-option {
-    width: 180px;
-    height: 48px;
-}
-
-.eye-icon {
-    right: 10px;
-    top: 10px
-}
-
-.error-icon-password {
-    right: 30px;
-    top: 10px
-}
-
-.password {
-    padding-right: 48px;
-}
-
-
-.status {
-    border: 1px solid;
-    border-radius: 16px;
-    padding: 2px 12px
+.keys-list {
+    overflow-y: auto;
+    height: calc(100vh - 174px);
 }
