--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -103,8 +103,8 @@
 
             <div [ngClass]="{'show':showNodeProperties}" class="node-properties border-left position-fixed bg-white">
                 <odp-node-properties *ngIf="showNodeProperties" [edit]="edit" [nodeList]="nodeList"
-                    [currNode]="selectedNode.currNode" [prevNode]="selectedNode.prevNode"
-                    (close)="showNodeProperties=false" (changesDone)="changesDone = true">
+                    [currNode]="selectedNode.currNode" (close)="showNodeProperties=false"
+                    (changesDone)="changesDone = true">
                 </odp-node-properties>
             </div>
         </div>
