--- a/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
@@ -13,6 +13,14 @@
 </div>
 <ng-container *ngIf="currNode?.options?.dataService">
     <div class="d-flex flex-column">
+        <div class="form-group position-relative">
+            <label for="authorization">Authorization Token</label>
+            <input id="authorization" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.authorization">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
+                [(value)]="currNode.options.authorization">
+            </odp-node-data-selector>
+        </div>
         <div class="form-group position-relative d-flex align-items-center">
             <odp-checkbox [edit]="edit" [(checked)]="currNode.options.get"
                 (checkedChange)="setDataServiceOperation('get',$event)"></odp-checkbox>
@@ -37,7 +45,8 @@
     <ng-container *ngIf="currNode.options.get">
         <div class="form-group position-relative ">
             <label for="select">Select</label>
-            <input id="select" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.select">
+            <input id="select" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.select">
             <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
                 [(value)]="currNode.options.select">
             </odp-node-data-selector>
@@ -45,13 +54,22 @@
         </div>
         <div class="form-group position-relative ">
             <label for="count">Count</label>
-            <input id="count" type="number" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.count">
+            <input id="count" type="number" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.count">
             <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.count">
             </odp-node-data-selector>
         </div>
         <div class="form-group position-relative ">
+            <label for="page">Page</label>
+            <input id="page" type="number" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.page">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.page">
+            </odp-node-data-selector>
+        </div>
+        <div class="form-group position-relative ">
             <label for="sort">Sort</label>
-            <input id="sort" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.sort">
+            <input id="sort" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.sort">
             <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.sort">
             </odp-node-data-selector>
             <small class="form-text text-muted">Provide Comma Separated Fields<br><i>(prefix: "-" for descending
@@ -60,31 +78,38 @@
         </div>
         <div class="form-group position-relative ">
             <label for="filter">Filter</label>
-            <textarea id="filter" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.filter"></textarea>
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.filter">
+            <textarea id="filter" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.filter"></textarea>
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
+                [(value)]="currNode.options.filter">
             </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode.options.delete">
         <div class="form-group position-relative ">
             <label for="docId">ID</label>
-            <input id="docId" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.documentId">
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.documentId">
+            <input id="docId" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.documentId">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
+                [(value)]="currNode.options.documentId">
             </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode.options.update">
         <div class="form-group position-relative ">
             <label for="fields">Update Based on Fields</label>
-            <input id="fields" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.fields">
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.fields">
+            <input id="fields" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.fields">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
+                [(value)]="currNode.options.fields">
             </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode.options.update || currNode.options.insert">
         <div class="form-group position-relative ">
             <label for="fields">Body</label>
-            <input id="fields" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.body">
+            <input id="fields" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.body">
             <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
