--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -19,15 +19,10 @@
     </div>
     <div class="form-group">
         <label class="font-14 fw-300 text-dark" for="nodeType">Node Type</label>
-        <select *ngIf="!prevNode" id="nodeType" class="form-control" [(ngModel)]="currNode.type"
+        <select id="nodeType" class="form-control" [(ngModel)]="currNode.type"
             (ngModelChange)="onTypeChange($event); changesDone.emit()">
-            <option value="API">API Reciever</option>
-            <option value="FILE">File Agent</option>
-            <option value="TIMER">Timer</option>
-            <!-- <option value="CONNECTOR">Connector</option> -->
-        </select>
-        <select *ngIf="prevNode" id="nodeType" class="form-control" [(ngModel)]="currNode.type"
-            (ngModelChange)="onTypeChange($event); changesDone.emit()">
+            <option *ngIf="!prevNode" value="API">API Reciever</option>
+            <option *ngIf="!prevNode" value="TIMER">Timer</option>
             <option value="API">API Invoke</option>
             <option value="FILE">File Agent</option>
             <option value="MAPPING">Mapping</option>
@@ -44,7 +39,8 @@
             <span class="text-muted"><i>(optional)</i></span>
         </label>
         <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
-        <odp-data-structure-selector [edit]="edit" [format]="currNode.dataStructure.outgoing" (formatChange)="onFormatChange($event)">
+        <odp-data-structure-selector [edit]="edit" [format]="currNode.dataStructure.outgoing"
+            (formatChange)="onFormatChange($event)">
         </odp-data-structure-selector>
     </div>
     <ng-container *ngIf="!prevNode">
@@ -186,11 +182,11 @@
         </div>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='CONNECTOR'">
-        <odp-connector-properties [edit]="edit" [nodeList]="nodeList" [currNode]="currNode" [prevNode]="prevNode">
+        <odp-connector-properties [edit]="edit" [nodeList]="nodeList" [currNode]="currNode">
         </odp-connector-properties>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='DATASERVICE'">
-        <odp-data-service-properties [edit]="edit" [nodeList]="nodeList" [currNode]="currNode" [prevNode]="prevNode">
+        <odp-data-service-properties [edit]="edit" [nodeList]="nodeList" [currNode]="currNode">
         </odp-data-service-properties>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='FUNCTION'">
@@ -236,7 +232,8 @@
             <label class="font-14 fw-300 text-dark" for="nodeStatusCode">Status Code</label>
             <input id="nodeStatusCode" type="text" class="form-control dynamic-variable-addon"
                 [(ngModel)]="currNode.options.statusCode" (ngModelChange)="changesDone.emit()">
-            <odp-node-data-selector class="node-data-selector" [edit]="edit" [nodeList]="nodeList" [(value)]="currNode.options.body">
+            <odp-node-data-selector class="node-data-selector" [edit]="edit" [nodeList]="nodeList"
+                [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
         <div class="form-group position-relative">
@@ -257,14 +254,15 @@
             <label class="font-14 fw-300 text-dark" for="nodeBody">Body</label>
             <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
                 [(ngModel)]="currNode.options.body"></textarea>
-            <odp-node-data-selector [edit]="edit" class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
+            <odp-node-data-selector [edit]="edit" class="node-data-selector" [nodeList]="nodeList"
+                [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
     </ng-container>
 </div>
 
 <div [ngClass]="{'show':showNodeMapping}" class="node-mapping-window border-left position-fixed bg-white p-4">
-    <odp-node-mapping *ngIf="showNodeMapping" [edit]="edit" [nodeList]="nodeList" [prevNode]="prevNode" [currNode]="currNode"
+    <odp-node-mapping *ngIf="showNodeMapping" [edit]="edit" [nodeList]="nodeList" [currNode]="currNode"
         (close)="closeMapping($event)"></odp-node-mapping>
 </div>
 
