--- a/src/app/admin/user-list/user-manage/user-info/user-info.component.html
+++ b/src/app/admin/user-list/user-manage/user-info/user-info.component.html
@@ -96,7 +96,7 @@
             </div>
             <label class="font-weight-bold m-0">Attributes</label>
           </div>
-          <button type="button" class="btn btn-link" (click)="manageUserAttribute()">
+          <button type="button" class="btn btn-link d-flex align-items-center" (click)="manageUserAttribute()">
             <span class="dsi dsi-plus mr-2"></span>
             <span class="text">Add</span>
           </button>
