--- a/src/app/home/faas/faas-manage/faas-manage.component.scss
+++ b/src/app/home/faas/faas-manage/faas-manage.component.scss
@@ -1,3 +1,15 @@
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
+
+.faas-manage-page {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+
 .editor-theme-selection {
   min-width: 200px;
 }
@@ -16,11 +28,13 @@
 
 .editor-wrapper {
   width: calc(100% - 360px);
+  height: calc(100vh - 196px);
 }
 
 .helper-panel {
   width: 360px;
-  height: calc(100vh - 292px);
+  // height: calc(100vh - 292px);
+  height: calc(100vh - 196px);
   overflow: auto;
 }
 
@@ -36,10 +50,20 @@
   bottom: -360px;
   z-index: 2;
   transition: 0.2s;
-  overflow: auto;
 
   &.show {
     bottom: 0;
+  }
+
+  .logs-wrapper {
+    overflow: auto;
+    height: 306px !important;
+
+    pre {
+      overflow: hidden;
+      word-wrap: break-word;
+      white-space: break-spaces;
+    }
   }
 }
 
