--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -132,7 +132,7 @@
       <span class="text mt-1 ml-2">Integration</span>
     </div> -->
   <div class="d-flex w-100 h-100">
-    <div class="d-flex flex-column body w-100">
+    <div class="d-flex flex-column w-100">
       <router-outlet></router-outlet>
     </div>
   </div>
