--- a/src/app/home/api-keys/api-keys-manage/api-keys-manage.component.html
+++ b/src/app/home/api-keys/api-keys-manage/api-keys-manage.component.html
@@ -7,21 +7,24 @@
     </div>
 </div>
 <div class="p-3">
-    <div class="header d-flex align-items-center justify-content-between mb-4">
-        <div class="d-flex align-items-center">
-            <span class="fw-600 font-20">{{data.name}}</span>
-            <span class="fw-500 font-14 px-2 py-1 rounded ml-4" [ngClass]="daysClass" ngbTooltip="Days Remaining">
-                {{days > 0 ? days : 0}}
-            </span>
-            <span *ngIf="days<1" class="font-12 fw-600 ml-3 text-danger">
-                This key will be removed in {{cleanUpDays}} days
-            </span>
+    <div class="header d-flex flex-column mb-4">
+        <div class="d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center">
+                <span class="fw-600 font-20">{{data.name}}</span>
+                <span class="fw-500 font-14 px-2 py-1 rounded ml-4" [ngClass]="daysClass" ngbTooltip="Days Remaining">
+                    {{days > 0 ? days : 0}}
+                </span>
+                <span *ngIf="days<1" class="font-12 fw-600 ml-3 text-danger">
+                    This key will be removed in {{cleanUpDays}} days
+                </span>
+            </div>
+            <div class="d-flex align-items-center justify-content-end position-relative">
+                <span class="mr-3 fw-500 text-dark">{{data.status}}</span>
+                <odp-switch [checked]="data.status=='Enabled'" (checkedChange)="toggleStatus($event)"
+                    [edit]="{status:hasPermission('PMAPI')}"></odp-switch>
+            </div>
         </div>
-        <div class="d-flex align-items-center justify-content-end position-relative">
-            <span class="mr-3 fw-500 text-dark">{{data.status}}</span>
-            <odp-switch [checked]="data.status=='Enabled'" (checkedChange)="toggleStatus($event)"
-                [edit]="{status:hasPermission('PMAPI')}"></odp-switch>
-        </div>
+        <code class="mt-3 text-muted text-uppercase">#{{data.tokenHash}}</code>
     </div>
     <div class="content">
         <div class="tab-list d-flex align-items-center border rounded">
