--- a/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
@@ -1,6 +1,6 @@
 <div class="position-relative">
     <span ngbTooltip="Add Dynamic Variable" container="body"
-        class="dynamic-variable-button dsi dsi-object text-primary position-absolute hover"
+        class="dynamic-variable-button dsi dsi-object text-primary position-absolute hover bg-white pr-1"
         (click)="onClick($event)"></span>
     <!-- <span *ngIf="value">{{currentValue}}</span> -->
 </div>
